# ai-security

./: .env.example  .gitignore  404.html  CLAUDE.md  Makefile  README.md  ROADMAP.md  SHOWCASE.md  automation.example.yaml  index.html  lychee.toml  mkdocs.yml  mkdocs_hooks.py  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: ci.yml  docs.yml  links.yml  security-scan.yml
aug/: __init__.py  backends.py  client.py  models.py  smoke.py  triage.py
automation/: __init__.py  __main__.py  index.html  pipeline.py  report.py  scanners.py
conventions/: index.html
docs/: automation.md  conventions.md  labs.md  showcase.md
docs/modules/: 00-foundations.md  01-sast.md  02-secrets.md  03-supply-chain.md  04-dast-web.md  05-recon-network.md  06-fuzzing.md  07-reverse-engineering.md  08-cloud-iac.md  09-detection-engineering.md  10-llm-security.md  11-cloud-identity-attack-paths.md  12-cicd-supply-chain.md  13-container-k8s-runtime.md  14-host-hardening-compliance.md  15-zero-trust-ztna.md  16-automation-pipelines.md  17-security-architecture-threat-modeling.md  18-network-security.md  19-enterprise-iam.md  20-cryptography-data-security.md  21-security-operations-siem.md  22-incident-response-forensics.md  23-threat-intel-hunting.md  24-offensive-operations.md  25-grc-risk-compliance.md  capstone.md
labs/: README.md  docker-compose.yml  index.html
modules/: CONVENTIONS.md
modules/00-foundations/: README.md  index.html
modules/01-sast/: README.md  index.html
modules/02-secrets/: README.md  index.html
modules/03-supply-chain/: README.md  index.html
modules/04-dast-web/: README.md  index.html
roadmap/: index.html
search/: search_index.json
showcase/: index.html
tests/: test_models.py
(+148 files in other folders)
