[project]
name = "ai-security-curriculum"
version = "0.1.0"
description = "Hardcore AI security engineering curriculum: tour OSS security tooling, augment it with Claude."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
# Local-model backend (Ollama). Optional so the Claude-only path stays clean.
local = [
    "ollama>=0.5",
]

[tool.setuptools.packages.find]
include = ["aug*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
